--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am currently a student.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Long Island, New York</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies are watching sports and walking my dogs.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to work for myself</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live on Long Island</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web develpoer because I want to have a better job.</p>
     </section>
 
     <footer id="footer">
